--- a/index.html
+++ b/index.html
@@ -2,16 +2,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Colibri Viagens</title>
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #fefefe;
-      color: #333;
-    }
+    body { margin: 0; font-family: Arial, sans-serif; background: #fefefe; color: #333; }
     header {
       background: #ff7f00;
       padding: 1rem;
@@ -20,14 +15,8 @@
       top: 0;
       z-index: 1000;
     }
-    header h1 {
-      color: #fff;
-      margin: 0;
-      font-size: 1.8rem;
-    }
-    nav {
-      margin-top: 0.5rem;
-    }
+    header h1 { color: #fff; margin: 0; font-size: 1.8rem; }
+    nav { margin-top: 0.5rem; }
     nav a {
       color: #fff;
       margin: 0 10px;
@@ -35,18 +24,12 @@
       font-weight: bold;
     }
     .hero {
-      background: url('https://images.unsplash.com/photo-1544620347-c4fd4a3d5957?auto=format&fit=crop&w=1400&q=80') no-repeat center center/cover;
-      padding: 4rem 2rem;
+      background: #eee;
+      padding: 3rem 1rem;
       text-align: center;
-      color: white;
     }
-    .hero h2 {
-      font-size: 2.5rem;
-      margin: 0 0 1rem 0;
-    }
-    .hero p {
-      font-size: 1.2rem;
-    }
+    .hero h2 { font-size: 2.2rem; margin-bottom: 0.5rem; }
+    .hero p { font-size: 1.2rem; }
     .section {
       padding: 2rem;
       max-width: 900px;
@@ -87,15 +70,27 @@
       text-decoration: none;
       font-size: 1.2rem;
     }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 10px;
+      margin-top: 2rem;
+    }
+    .gallery img {
+      width: 100%;
+      height: auto;
+      border-radius: 6px;
+      box-shadow: 0 0 10px #ccc;
+    }
     footer {
       background: #333;
       color: white;
       text-align: center;
       padding: 1rem;
+      margin-top: 2rem;
     }
     footer a {
       color: #ffcc33;
-      margin: 0 0.5rem;
       text-decoration: none;
     }
     .whatsapp-float {
@@ -123,6 +118,7 @@
     <nav>
       <a href="#servicos">Serviços</a>
       <a href="#depoimentos">Depoimentos</a>
+      <a href="#galeria">Galeria</a>
       <a href="#contato">Contato</a>
     </nav>
   </header>
@@ -159,19 +155,32 @@
     </div>
   </section>
 
+  <section class="section" id="galeria">
+    <h2>Galeria de Fotos</h2>
+    <div class="gallery">
+      <img src="file-ULiwcc7rmLKFUKTZ4CcioV" alt="Foto de viagem">
+      <img src="file-GBwSibaoemdKDvAfg9NYJW" alt="Foto de viagem">
+      <img src="file-RWwRkCCGXetajfJy2dNJDX" alt="Foto de viagem">
+      <img src="file-WbXaJmZsKgG9eZB7CqSc8C" alt="Foto de viagem">
+      <img src="file-3tZbuaS1tFozBoxCGf6nZt" alt="Foto de viagem">
+      <img src="file-9Z7xkV9nZyPJAFCy6patNy" alt="Foto de viagem">
+      <img src="file-Hwr4xswwNktbdBS23eXGzC" alt="Foto de viagem">
+      <img src="file-4hb1zgCt2yPQ5PBJk5RgSC" alt="Foto de viagem">
+      <img src="file-GQ6oJWrFNUXSYTjTeLNoTM" alt="Foto de viagem">
+      <img src="file-2zqhvxZPyfkHLBvMWZwk1t" alt="Foto de viagem">
+
+    </div>
+  </section>
+
   <section class="cta" id="contato">
     <a href="https://wa.me/5584988299179" target="_blank">Solicite um orçamento pelo WhatsApp</a>
   </section>
 
   <footer>
     <p>Colibri Viagens © 2025 — Viaje com quem entende de conforto e confiança.</p>
-    <p>
-      <a href="https://instagram.com/colibri.viagens" target="_blank">Instagram</a>
-    </p>
+    <p><a href="https://instagram.com/colibri.viagens" target="_blank">Instagram</a></p>
   </footer>
 
-  <a href="https://wa.me/5584988299179" class="whatsapp-float" target="_blank">
-    <i>📱</i>
-  </a>
+  <a href="https://wa.me/5584988299179" class="whatsapp-float" target="_blank"><i>📱</i></a>
 </body>
 </html>
